--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-h5-audio-player",
-  "version": "3.6.0",
+  "name": "@wzhonggo/react-h5-audio-player",
+  "version": "3.6.1",
   "description": "A customizable React audio player. Written in TypeScript. Mobile compatible. Keyboard friendly",
   "main": "./lib/index.js",
   "module": "./es/index.js",
@@ -39,7 +39,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/lhz516/react-h5-audio-player.git"
+    "url": "git+ssh://git@github.com/wzhonggo/react-h5-audio-player.git"
   },
   "keywords": [
     "react",
@@ -53,12 +53,12 @@
     "mse",
     "eme"
   ],
-  "author": "Hanz Luo",
+  "author": "wzhonggo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lhz516/react-h5-audio-player/issues"
+    "url": "https://github.com/wzhonggo/react-h5-audio-player/issues"
   },
-  "homepage": "https://github.com/lhz516/react-h5-audio-player#readme",
+  "homepage": "https://github.com/wzhonggo/react-h5-audio-player#readme",
   "peerDependencies": {
     "react": "^16.3.0 || ^17.0.0",
     "react-dom": "^16.3.0 || ^17.0.0"
